--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', 'sans-serif';
+}
+
+:root {
+    --border-color: rgba(221, 221, 221, 0.602);
 }
 
 header {
@@ -26,18 +31,17 @@ main {
     background-color: rgba(233, 233, 233, 0.335);
     padding: 25px;
 }
-.search-container, form {
+.search-container form {
     grid-row: 1/2;
     grid-column: 1/2;
 }
-.search-container, ul {
+.search-container ul {
     grid-row: 1/2;
     grid-column: 1/2;
 }
 .list-cities {
     list-style-type: none;
 }
-
 
 form {
     margin-left: 10px;
@@ -57,23 +61,66 @@ label {
     min-height: 30px;
     min-width: 30px;
     background-color: #2176FF;
-    border: 1px solid #2176FF;
+    border: 1px solid #4089ff86;
     border-radius: 4px;
     padding: 6px 0 0 6px;
 }
 input {
     min-height: 30px;
     min-width: 200px;
-    border: 1px  rgba(221, 221, 221, 0.602) solid;
+    border: 1px  var(--border-color) solid;
     margin-top: 5px;
 }
 
-
 .btn {
-    border: 1px rgba(221, 221, 221, 0.602) solid;
+    border: 1px var(--border-color) solid;
     background-color: white;
     margin: 0 10px 0 10px;
     padding: 15px;
     width: 100%;
     text-align: left;
+}
+
+
+.main-info-container {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.25fr .75fr
+}
+
+.weather-details-container {
+    border: 2px solid var(--border-color) ;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 10px;
+}
+.weather-details-container h1 {
+    margin-left: 20px;
+    margin-bottom: 10px;
+    color: black;
+    font-size: 30px;
+    font-weight: 500;
+}
+.details-list {
+    display: flex;
+    flex-flow: column;
+    margin-top: 10px;
+}
+.details-list li {
+    list-style-type: none;
+    margin: 10px 10px 10px 20px;
+}
+
+.forecast {
+
+    margin: 10px;
+}
+.forecast h1 {
+    color: black;
+    font-weight: 500;
 }
