--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,11 +50,11 @@ form {
 label {
     font-size: 18px;
 }
-.material-icons {
+/* .material-icons {
     color: white;
     font-size: 1rem;
 }
-.box {
+ .box {
     display: inline-block;
     top: 4px;
     position: relative;
@@ -64,7 +64,7 @@ label {
     border: 1px solid #4089ff86;
     border-radius: 4px;
     padding: 6px 0 0 6px;
-}
+} */ 
 input {
     min-height: 30px;
     min-width: 200px;
@@ -116,11 +116,18 @@ input {
     margin: 10px 10px 10px 20px;
 }
 
-.forecast {
 
-    margin: 10px;
-}
 .forecast h1 {
     color: black;
     font-weight: 500;
+    margin-left: 10px;
+}
+.card-container {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.card {
+    color: black;
 }
