--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,20 @@ main {
     list-style-type: none;
 }
 
+.submit-btn {
+    position: relative;
+    top: 5px;
+    max-height: 30px;
+    min-width: 30px;
+    background-color: rgba(126, 229, 255, 0.698);
+    border: 1px solid rgba(126, 229, 255, 0.698);
+    border-radius: 5px;
+}
+.submit-btn:hover {
+    border: 3px solid rgba(75, 219, 255, 0.609);
+    bottom: 3px;
+}
+
 form {
     margin-left: 10px;
     margin-bottom: 10px;
@@ -50,21 +64,7 @@ form {
 label {
     font-size: 18px;
 }
-/* .material-icons {
-    color: white;
-    font-size: 1rem;
-}
- .box {
-    display: inline-block;
-    top: 4px;
-    position: relative;
-    min-height: 30px;
-    min-width: 30px;
-    background-color: #2176FF;
-    border: 1px solid #4089ff86;
-    border-radius: 4px;
-    padding: 6px 0 0 6px;
-} */ 
+
 input {
     min-height: 30px;
     min-width: 200px;
