--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,9 @@ header, nav, h1 {
     color: white;
     font-size: 1.5em;
 }
-
+body {
+    margin-bottom: 100px;
+}
 main {
     display: grid;
     grid-template-rows: 1fr;
@@ -130,4 +132,9 @@ input {
 }
 .card {
     color: black;
+    background-color: rgba(99, 193, 255, 0.657);
+}
+.icon {
+    height: 100px;
+    width: 100px;
 }
